--- a/dict.css
+++ b/dict.css
@@ -69,10 +69,12 @@ button{
 } */
 
 body{
-    background: url(element5-digital-OyCl7Y4y0Bk-unsplash.jpg);
+    /* background: url(element5-digital-OyCl7Y4y0Bk-unsplash.jpg);
     background-attachment: fixed;
     background-size: cover;
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px); */
+    background-color: #4158D0;
+    background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
     margin: 0;
     padding: 0;
     width: 100%;
